# hpc-hw

./: .gitignore  CMakeLists.txt  readme.md
01-knapsack/: CMakeLists.txt  context.hpp  main.cpp
01-knapsack/tests/medium/: test_100_1.in  test_100_2.in  test_100_3.in  test_100_5.in  test_100_6.in  test_100_7.in  test_100_9.in
01-knapsack/tests/small/: 1.in  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  16.out  18.out  19.in  2.in  20.in  21.in  21.out  22.in  23.in  24.in  24.out  25.in  25.out  26.in  26.out  27.out  28.in  28.out  29.in  29.out  32.out  34.in  35.in  35.out  36.in  37.in  37.out  39.in  40.out  41.out  6.in  (+4 more)
1-knapsack/: CMakeLists.txt  context.cpp  context.hpp  knapsack.cpp  knapsack.hpp  main.cpp  readme.md
1-knapsack/src/: CMakeLists.txt  main.cpp  solver.cpp  solver.hpp
1-knapsack/tests/medium/: 10.in  8.in  test_100_4.in
2-cluster/: readme.md
2-cluster/data/: 1  2  3  4  5
2-cluster/results/: 1  2  3  4  5
2-cluster/src/: CMakeLists.txt  cluster.cpp  cluster.hpp  config.hpp  main.cpp  solver.cpp  solver.hpp
2-game-of-life/src/: CMakeLists.txt  board.cpp  board.hpp  worker.cpp  worker.hpp  world.cpp  world.hpp
3-heat/: generate-simple-test.py  generate_simple_test.py  readme.md  run-mpi.sh  test-simple.py
3-heat/src/: CMakeLists.txt  config.hpp  macros.hpp  main.cpp  process.cpp  process.hpp  types.hpp  world-guard.cpp  world-guard.hpp
4-blur/: experiments.ipynb
4-blur/images/: 01-test.tiff
4-blur/src/: CMakeLists.txt  main.cpp
cmake/: Sanitizers.cmake  Settings.cmake  Warnings.cmake
(+28 files in other folders)
